Improved the responsiveness of the site.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="./images/logo.svg" alt="Huddle logo" />
+      <a href="/">
+        <img class="logo" src="./images/logo.svg" alt="Huddle logo" />
+      </a>
     </header>
 
     <main class="grid">
@@ -46,21 +48,25 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <aside class="icon-block">
       <a href="#" class="fa-brands fa-facebook-f icon icon--white"></a>
-
       <a href="#" class="fa-brands fa-twitter icon icon--white"></a>
+      <a href="#" class="fa-brands fa-instagram icon icon--white"></a>
+    </aside>
 
-      <a class="fa-brands fa-instagram icon icon--white"></a>
-    </footer>
-
-    <!-- <footer>
+    <footer>
       <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Karthi</a>.
+        Challenge by&nbsp;
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+          Frontend Mentor
+        </a>
+        . Coded by&nbsp;<a
+          href="https://github.com/Karthi13krishna"
+          target="_blank"
+        >
+          Karthi</a
+        >.
       </p>
-    </footer> -->
+    </footer>
   </body>
 </html>
