Added parcel bundler and did minor adjustments

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="dist/style.css" />
+    <link rel="stylesheet" href="scss/style.scss" />
     <link
       rel="icon"
       type="image/png"
@@ -48,13 +48,12 @@
       </section>
     </main>
 
-    <aside class="icon-block">
-      <a href="#" class="fa-brands fa-facebook-f icon icon--white"></a>
-      <a href="#" class="fa-brands fa-twitter icon icon--white"></a>
-      <a href="#" class="fa-brands fa-instagram icon icon--white"></a>
-    </aside>
-
-    <footer>
+    <footer class="footer">
+      <section class="icon-block">
+        <a href="#" class="fa-brands fa-facebook-f icon icon--white"></a>
+        <a href="#" class="fa-brands fa-twitter icon icon--white"></a>
+        <a href="#" class="fa-brands fa-instagram icon icon--white"></a>
+      </section>
       <p class="attribution">
         Challenge by&nbsp;
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
