--- a/index.html
+++ b/index.html
@@ -50,9 +50,21 @@
 
     <footer class="footer">
       <section class="icon-block">
-        <a href="#" class="fa-brands fa-facebook-f icon icon--white"></a>
-        <a href="#" class="fa-brands fa-twitter icon icon--white"></a>
-        <a href="#" class="fa-brands fa-instagram icon icon--white"></a>
+        <a
+          href="#"
+          aria-label="facebook icon"
+          class="fa-brands fa-facebook-f icon icon--white"
+        ></a>
+        <a
+          href="#"
+          aria-label="twitter icon"
+          class="fa-brands fa-twitter icon icon--white"
+        ></a>
+        <a
+          href="#"
+          aria-label="instagram icon"
+          class="fa-brands fa-instagram icon icon--white"
+        ></a>
       </section>
       <p class="attribution">
         Challenge by&nbsp;
