changed sections to div

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </header>
 
     <main class="grid">
-      <section class="hero__image">
+      <div class="hero__image">
         <img src="./images/illustration-mockups.svg" alt="" />
-      </section>
-      <section class="hero__content">
+      </div>
+      <div class="hero__content">
         <h1 class="hero__heading">Build The Community Your Fans Will Love</h1>
         <p class="hero__text">
           Huddle re-imagines the way we build communities. You have a voice, but
@@ -45,7 +45,7 @@
           engage in genuine discussion.
         </p>
         <a href="#" class="button">Register</a>
-      </section>
+      </div>
     </main>
 
     <footer class="footer">
