changed icon block section to div

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer class="footer">
-      <section class="icon-block">
+      <div class="icon-block">
         <a
           href="#"
           aria-label="facebook icon"
@@ -65,7 +65,7 @@
           aria-label="instagram icon"
           class="fa-brands fa-instagram icon icon--white"
         ></a>
-      </section>
+      </div>
       <p class="attribution">
         Challenge by&nbsp;
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
